# benchmarks

CEED_BK/: CMakeLists.txt  README.md
CEED_BK/docs/: BK1.md  BK3.md  BK5.md
CEED_BK/include/: benchmark_printer.hpp
CEED_BK/include/kernels/BK1/: serial_kernels.hpp  templated_cuda_kernels.cuh  templated_kokkos_kernels.hpp
CEED_BK/include/kernels/BK3/: templated_cuda_kernels.cuh  templated_kokkos_kernels.hpp
CEED_BK/include/kernels/BK5/: serial_kernels.hpp  templated_cuda_kernels.cuh  templated_kokkos_kernels.hpp
CEED_BK/src/BK1/: CMakeLists.txt  serial_verification.cc  templated_batched_kokkos_benchmark.cc  templated_cuda_benchmark.cc  templated_kokkos_benchmark.cc
CEED_BK/src/BK3/: CMakeLists.txt  serial_verification.cc  templated_batched_kokkos_benchmark.cc  templated_cuda_benchmark.cc  templated_kokkos_benchmark.cc
CEED_BK/src/BK5/: CMakeLists.txt  serial_verification.cc  templated_batched_kokkos_benchmark.cc  templated_cuda_benchmark.cc  templated_kokkos_benchmark.cc
CEED_bp/: CMakeLists.txt  README.md
CEED_bp/include/: bk3_kokkos_kernel.h  portable_laplace_operator.h
CEED_bp/results/: 1xGH200_P4.txt
CEED_bp/src/: bp3.cc
alternatives/: CMakeLists.txt  Makefile  README.md  RESOURCES.md  bk1_openmp_v2  sum_factorization.ir
alternatives/drivers/: BK1_opencl.cc  BK1_openmp.cc  BK1_tinytc.cc  BK5_opencl.cc  BK5_openmp.cc  bk1_openmp_v2.cc  bk5_opencl.cc  common.hpp  opencl_benchmark.cc  openmp_benchmark.cc  reference_kernels.hh  sum_factorization.ir  sycl_benchmark.cc  tinytc.cc  tinytc_benchmark.cc
alternatives/scripts/: bk1_kokkos_sweep.sh  kokkos.gp  normalize.sh  openmp.gp  plot_bk1.py  plot_bk1_3col.py  sweep_dofs_logspace.sh
alternatives/src/: BK1.cl  BK5_static.cl  bk1.ir  bk5.ir  bk5_kernels.cl  bk5_kernels_static.cl  kernels_common.h  opencl_kernels.cl  opencl_kernels_static.cl
bakeoff_problems_dealii/include/: bk3_kokkos_kernel.h  portable_laplace_operator.h  portable_laplace_operator_base.h  portable_laplace_operator_bk35.h  serial_kernels.hpp  templated_kokkos_kernels.hpp
bakeoff_problems_dealii/src/: CMakeLists.txt  program.cc
bakeoff_problems_dealii/src/bp35_dealii_kernel/: program.cc
bakeoff_problems_dealii/src/bp35_kokkos_kernel/: program.cc
bakeoff_problems_dealii/tests/: CMakeLists.txt  timing_bp_5_3.cc
bakeoff_problems_dealii/tests/resuts/: 1_GPU.out  4_GPU.out
bakeoff_problems_dealii/tests/scaling_bp35_dealii_kernel/: CMakeLists.txt  program.cc
bakeoff_problems_dealii/tests/scaling_bp35_kokkos_kernel/: program.cc
bk3_dealii/: CMakeLists.txt  check_bk3.cc
bp5_kokkos/: CMakeLists.txt  benchmark.cc  create_triangulation.h
p-halox/: .gitignore  CMakeLists.txt  README.md  phalox.cc
p-halox/scripts/: plot.gp
sum_factorization/: .gitignore  CMakeLists.txt  Makefile  README.md
sum_factorization/docs/: BK1.md  BK3.md  BK5.md
sum_factorization/include/: benchmark_printer.hpp  lagrange_basis.hpp  timer.hpp
sum_factorization/include/kernels/: parallel_kernels.cuh  serial_kernels.hpp
sum_factorization/include/kernels/BK1/: cuda_kernels.cuh  cuda_mma_kernels.cuh  kokkos_kernels.hpp  serial_kernels.hpp  templated_cuda_kernels.cuh  templated_cuda_mma_kernels.cuh  templated_kokkos_kernels.hpp
sum_factorization/include/kernels/BK3/: cuda_kernels.cuh  kokkos_kernels.hpp  serial_kernels.hpp  templated_cuda_kernels.cuh  templated_kokkos_kernels.hpp
sum_factorization/include/kernels/BK5/: cuda_kernels.cuh  kokkos_kernels.hpp  serial_kernels.hpp  templated_cuda_kernels.cuh  templated_kokkos_kernels.hpp
sum_factorization/include/math/: lagrange_basis.hpp  logspace.hpp
sum_factorization/scripts/: plot.gp  plotBK1.gp  plot_bk1.py  sweep_dofs_logspace.sh
sum_factorization/scripts/plot/: plot.py
sum_factorization/scripts/roofline/: rooflineBK1.py  rooflineBK3.py  rooflineBK5.py
sum_factorization/src/: benchmark.cc  benchmark_output.cc  block_dimension_benchmark.cc
sum_factorization/src/BK1/: CMakeLists.txt  benchmark_sycl.cpp  cuda_benchmark.cc  cuda_mma_benchmark.cc  kokkos_benchmark.cc  opencl_benchmark.cc  output_benchmark.cc  templated_cuda_benchmark.cc  templated_cuda_mma_benchmark.cc  templated_kokkos_benchmark.cc
sum_factorization/src/BK3/: CMakeLists.txt  cuda_benchmark.cc  kokkos_benchmark.cc  templated_cuda_benchmark.cc  templated_kokkos_benchmark.cc
sum_factorization/src/BK5/: CMakeLists.txt  constexpr_cuda_benchmark.cc  cuda_benchmark.cc  kokkos_benchmark.cc  templated_cuda_benchmark.cc  templated_kokkos_benchmark.cc
sum_factorization/tests/: CMakeLists.txt  test_lagrange.cc  verification.cc
sum_factorization/tests/BK1/: cuda_verification.cc  kokkos_verification.cc  serial_verification.cc
sum_factorization/tests/BK3/: cuda_verification.cc  kokkos_verification.cc  serial_verification.cc
sum_factorization/tests/BK5/: cuda_verification.cc  kokkos_verification.cc  serial_verification.cc
